# set-theory-prover

./: .ghci  .gitignore  .travis.yml  LICENSE  README.md  set-theory-prover.cabal  stack.yaml
app/: Main.hs
src/: Axioms.hs  Consequences.hs  Core.hs  LambdaEmbedding.hs  ProofState.hs  Syntax.hs  TacticMonad.hs  Tactics.hs
src/SetTheoryProver/: Core.hs  Interactive.hs
src/SetTheoryProver/Core/: Axioms.hs  ProofScript.hs  Syntax.hs
src/SetTheoryProver/Interactive/: LambdaEmbedding.hs  TacticMonad.hs  Tactics.hs
src/SetTheoryProver/Lib/: Logic.hs  SetTheory.hs
test/: DocTest.hs  Spec.hs
