name:                set-theory-prover
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/timjb/set-theory-prover#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
copyright:           MIT License
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  exposed-modules:
    SetTheoryProver.Core
    SetTheoryProver.Core.Syntax
    SetTheoryProver.Core.Axioms
    SetTheoryProver.Core.ProofScript
    SetTheoryProver.Interactive
    SetTheoryProver.Interactive.LambdaEmbedding
    SetTheoryProver.Interactive.TacticMonad
    SetTheoryProver.Interactive.Tactics
    SetTheoryProver.Lib.Logic
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    ansi-terminal,
    deepseq
  default-language:    Haskell2010

test-suite set-theory-prover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , set-theory-prover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite set-theory-prover-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timjb/set-theory-prover
